syntax = "proto3";

package hashicorp.watchtower.controller.iam.store.v1;
option go_package = "github.com/hashicorp/watchtower/internal/iam/store;store";

import "timestamp.proto";
import "scope.proto";

message Role {
  // @inject_tag: gorm:"primary_key"
  uint32 id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 2;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 3;

  // public_id is used to access the Role via an API
  string public_id = 4;

  // FriendlyName is the optional friendly name used to
  // access the Role via an API
  // @inject_tag: `gorm:"default:null"`
  string friendly_name = 5;

  string description = 6;

  // primary scope id of the PrimaryScope
  // @inject_tag: `gorm:"default:null"`
  uint32 primary_scope_id = 7;
  // @inject_tag: gorm:"foreignkey:ScopeId"
  Scope primary_scope = 8;

  // disabled is by default false and allows a Role to be marked disabled.
  bool disabled = 10;
}

message UserRole {
  // @inject_tag: gorm:"primary_key"
  uint32 id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 2;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 3;

  // public_id is used to access the UserRole via an API
  string public_id = 4;

  // FriendlyName is the optional friendly name used to
  // access the UserRole via an API
  // @inject_tag: `gorm:"default:null"`
  string friendly_name = 5;

  // primary scope id of the PrimaryScope
  // @inject_tag: `gorm:"default:null"`
  uint32 primary_scope_id = 6;
  // @inject_tag: gorm:"foreignkey:ScopeId"
  Scope primary_scope = 7;

  // role_id is the role of this principal.
  uint32 role_id = 9;

  // Principal type (User)
  uint32 type = 10;

  uint32 principal_id = 11;
}

message GroupRole {
  // @inject_tag: gorm:"primary_key"
  uint32 id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 2;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 3;

  // public_id is used to access the GroupRole via an API
  string public_id = 4;

  // FriendlyName is the optional friendly name used to
  // access the GroupRole via an API
  // @inject_tag: `gorm:"default:null"`
  string friendly_name = 5;

  // primary scope id of the PrimaryScope
  // @inject_tag: `gorm:"default:null"`
  uint32 primary_scope_id = 6;
  // @inject_tag: gorm:"foreignkey:ScopeId"
  Scope primary_scope = 7;

  // role_id is the role of this principal.
  uint32 role_id = 9;

  // Principal type (Group)
  uint32 type = 10;

  uint32 principal_id = 11;
}

message AssignedRoleView {
  // @inject_tag: gorm:"primary_key"
  uint32 id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp create_time = 2;

  // update_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  Timestamp update_time = 3;

  // public_id is used to access the PrincipalRole via an API
  string public_id = 4;

  // FriendlyName is the optional friendly name used to
  // access the PrincipalRole via an API
  // @inject_tag: `gorm:"default:null"`
  string friendly_name = 5;

  // primary scope id of the PrimaryScope
  // @inject_tag: `gorm:"default:null"`
  uint32 primary_scope_id = 6;
  // @inject_tag: gorm:"foreignkey:ScopeId"
  Scope primary_scope = 7;

  // role_id is the role of this principal.
  uint32 role_id = 9;

  // Principal type (User or Group)
  uint32 type = 10;

  uint32 principal_id = 11;
}